fix: Alignment does not work with or without sequences

--- a/src/styles/summernote/common.scss
+++ b/src/styles/summernote/common.scss
@@ -622,3 +622,7 @@ u{
   text-decoration-color: transparent;
   border-bottom: 1px solid #000;
 }
+//Alignment does not work with or without sequences
+.note-editable ul li,.note-editable ol li{
+  list-style-position: inside;
+}
